# lable

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/skills/release-version/: SKILL.md
.github/skills/zpl-diff-auto-fix/: SKILL.md
docs/: DESIGN_SYSTEM.md  PRODUCT_ARCHITECTURE.md  PRODUCT_SPEC.html  PRODUCT_SPEC_20260612_142726.html
e2e/http/: test_http.sh
e2e/sdk/: Cargo.toml
src/: lib.rs  main.rs  platform.rs  playground.rs
src/elements/: font.rs
testdata/diffs/: diff_report_unit.txt
testdata/samples/: README.md  z5z_01_gm_300_master.zpl
testdata/unit/: font_p.zpl  font_q.zpl  font_s.zpl
tests/: e2e_diff_report.rs  e2e_golden.rs  e2e_labelary.rs  unit_golden_png_dimensions.rs  unit_skill.rs
tests/common/: labelary_client.rs  mod.rs
