[package]
name = "labelize"
version = "1.0.0"
edition = "2021"
description = "Fast Rust engine to parse ZPL & EPL label data and render to PNG/PDF. CLI, HTTP microservice, or library. Open-source Labelary alternative."
keywords = ["zpl", "epl", "label", "barcode", "thermal-printer"]
categories = ["command-line-utilities", "graphics", "parsing", "web-programming"]
repository = "https://github.com/GOODBOY008/labelize"
homepage = "https://github.com/GOODBOY008/labelize"
license = "MIT"
readme = "README.md"
exclude = [
    "testdata/",
    "docs/",
    "examples/",
    "analyze_gd.py",
    ".github/",
    ".qoder/",
    ".kiro/",
    ".idea/",
    "AGENTS.md",
]

[dependencies]
image = "0.25"
imageproc = "0.26"
ab_glyph = "0.2"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
lopdf = "0.40"
flate2 = "1"
base64 = "0.22"
datamatrix = "0.3"
qrcode = "0.14"
rxing = { version = "0.8", default-features = false, features = ["encoding_rs"] }
regex = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1"
reqwest = { version = "0.13", features = ["blocking"] }
sha2 = "0.10"
